--- a/src/input.css
+++ b/src/input.css
@@ -1,8 +1,5 @@
-@font-face {
-  font-family: "Satoshi";
-  src: url("/_/fonts/SatoshiMedium.ttf") format("truetype");
-  font-weight: 400;
-}
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
 @font-face {
   font-family: "Urbanist";
   src: url("/_/fonts/UrbanistRegular.ttf") format("truetype");
